--- a/eOrder.Mobile/eOrder.Mobile/Views/LoginPage.xaml
+++ b/eOrder.Mobile/eOrder.Mobile/Views/LoginPage.xaml
@@ -20,7 +20,7 @@
             <Label Text="Password"
                 VerticalOptions="CenterAndExpand" 
                 HorizontalOptions="CenterAndExpand" />
-            <Entry Text="{Binding Password}"></Entry>
+            <Entry Text="{Binding Password}" IsPassword="True"></Entry>
             <Button Text="Log In" Command="{Binding LoginCommand}"></Button>
             <Button Text="Or Create a new account"
                 VerticalOptions="CenterAndExpand" 
