--- a/eOrder.Mobile/eOrder.Mobile/Views/RegisterPage.xaml
+++ b/eOrder.Mobile/eOrder.Mobile/Views/RegisterPage.xaml
@@ -36,13 +36,13 @@
                 VerticalOptions="CenterAndExpand" 
                 HorizontalOptions="CenterAndExpand" />
             <Entry 
-                Text="{Binding Password}"></Entry>
+                Text="{Binding Password}" IsPassword="True"></Entry>
             <Label 
                 Text="Password confirm"
                 VerticalOptions="CenterAndExpand" 
                 HorizontalOptions="CenterAndExpand" />
             <Entry 
-                Text="{Binding PasswordConfirm}"></Entry>
+                Text="{Binding PasswordConfirm}" IsPassword="True"></Entry>
             <Button Text="Log In" Command="{Binding RegisterCommand}"></Button>
         </StackLayout>
     </ContentPage.Content>
